--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -9,13 +9,14 @@ on:
   workflow_dispatch:
 
 env:
-  CURRENT_VERSION: 27.3.1
+  CURRENT_VERSION: 1.0.1
   BUILD_NUMBER: 0
-  LATEST_UBUNTU_VERSION: "24.04"
+  IMAGE_NAME: nickdlk/lyprobe
 
 jobs:
   docker:
     runs-on: ubuntu-latest
+    environment: Build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,7 +30,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
-          username: nickdlk
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
@@ -38,3 +39,15 @@ jobs:
           push: true
           file: Dockerfile
           platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ env.CURRENT_VERSION }}
+            ${{ env.IMAGE_NAME }}:${{ env.CURRENT_VERSION }}-r${{ env.BUILD_NUMBER }}
+            ${{ env.IMAGE_NAME }}:latest
+
+      - name: Docker Hub Description
+            uses: peter-evans/dockerhub-description@v3
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+              repository: ${{ env.IMAGE_NAME }}
+              readme-filepath: ./README.md
