--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -16,6 +16,7 @@ env:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    environment: Build
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
