--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -12,11 +12,18 @@ env:
   CURRENT_VERSION: 1.0.1
   BUILD_NUMBER: 0
   IMAGE_NAME: nickdlk/lyprobe
+  REGISTRY: ghcr.io
+  GITHUB_IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     environment: Build
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -32,8 +39,21 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
-      - name: Build and push
+          
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.GITHUB_IMAGE_NAME }}
+          
+      - name: Build and push to Dockerhub
         uses: docker/build-push-action@v6
         with:
           push: true
@@ -43,7 +63,23 @@ jobs:
             ${{ env.IMAGE_NAME }}:${{ env.CURRENT_VERSION }}
             ${{ env.IMAGE_NAME }}:${{ env.CURRENT_VERSION }}-r${{ env.BUILD_NUMBER }}
             ${{ env.IMAGE_NAME }}:latest
-
+            
+      - name: Build and push to ghcr.io
+        id: push
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.GITHUB_IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
+          
       - name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v4
         with:
